k8s/config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: sudhakar20000/ib-config-server:latest
          ports:
            - containerPort: 8090
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: banking
spec:
  selector:
    app: config-server
  ports:
    - port: 8090
      targetPort: 8090
