k8s/service-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
        - name: service-registry
          image: sudhakar20000/ib-service-registry:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: service-registry
  namespace: banking
spec:
  selector:
    app: service-registry
  ports:
    - port: 8081
      targetPort: 8081
